docs(issue): add review comments for CHORE-0047

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Monoco Toolkit
+site_name: Monoco
 site_url: https://monoco.io/toolkit/
 repo_url: https://github.com/monoco-io/toolkit
 theme:
