--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-n-publish:
-    name: Build and publish Monoco Toolkit to PyPI
+    name: Build and publish Monoco to PyPI
     runs-on: ubuntu-latest
     permissions:
       id-token: write # Mandatory for trusted publishing
