--- a/site/package.json
+++ b/site/package.json
@@ -1,7 +1,7 @@
 {
   "name": "monoco-docs",
   "version": "0.4.0",
-  "description": "Monoco Toolkit Documentation",
+  "description": "Monoco Documentation",
   "main": "index.js",
   "scripts": {
     "dev": "vitepress dev",
