--- a/.gitignore
+++ b/.gitignore
@@ -80,4 +80,4 @@ test.pdf
 scripts/get_dingtalk_chat_id.py
 scripts/test_dingtalk_send.py
 *.zip
-.agents/hooks/.logs/session.log
+.agents/hooks/.logs/
